--- a/resources/welcome.html
+++ b/resources/welcome.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
-        <title>tree {{version}} for OS X</title>
+        <title>tree {{version}} for macOS</title>
         <style type="text/css">
             html, body {
                 font: 11pt Helvetica, sans-serif;
@@ -21,13 +21,13 @@
     <body>
         <p></p>
         <p class="intro">
-            You will be guided through the steps necessary to install or update the
-            tree {{version}} for OS X on this Mac.
+            You will be guided through the steps necessary to install or update 
+            tree {{version}} for macOS on this Mac.
         </p>
         <p class="footer">
             This installer package is provided by
         <br>
-            Able Pear Software Inc.
+        <a href="http://donm.cc/">Don McCaughey</a>.
         </p>
     </body>
 </html>
