Added installer revision number to the welcome page.
Also made minor changes to the welcome page text.

--- a/resources/welcome.html
+++ b/resources/welcome.html
@@ -22,11 +22,11 @@
         <p></p>
         <p class="intro">
             You will be guided through the steps necessary to install or update 
-            tree {{version}} for macOS on this Mac.
+            <a href="http://mama.indstate.edu/users/ice/tree/"><code>tree</code></a>
+            on this Mac.
         </p>
         <p class="footer">
-            This installer package is provided by
-        <br>
+            Installer rev {{revision}} provided by 
             <a href="http://donm.cc/">Don McCaughey</a>.
         </p>
     </body>
